--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
    <div class="container">
     <h1 class="text-center">Fetch</h1>
     <h2 class="text-center">Курс JavaScript 2.0 <br> Лущенко Александр</h2>
-    <button class="buttin-primary">GO</button>
+    <button class="button">STATUS</button>
+    <button class="button2">OK</button>
     <div class="out"></div>
+    <div class="out1"></div>
     <hr>
 
 
